<resources>
    <string name="app_name">AndroidAcademy</string>

    <string name="back_text">Back</string>
    <string name="pg_name_text">13+</string>
    <string name="movie_name_text">Avengers:   /nEnd Game</string>
    <string name="category_movie_text">Action, Adventure, Fantasy</string>
    <string name="storyline_text">Storyline</string>
    <string name="movie_description_text">After the devastating events of Avengers: Infinity War,
        the universe is in ruins. With the help of remaining allies, the Avengers assemble once
        more in order to reverse Thanos\' actions and restore balance to the universe.</string>

    <string name="descriptions">Greate actor or actress</string>
    <string name="cast">Cast</string>
    <string name="robert_downey">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="top_menu_bg">Top Menu BG</string>
    <string name="movie_background_image_desc">Movie Background Image</string>
    <string name="return_back_arrow">Return Back Arrow</string>
    <string name="review_text">125 review</string>
    <string name="watch_later">Watch later</string>
    <string name="channel_new_movies">New messages</string>
    <string name="channel_new_movies_description">New movies loaded from background</string>
    <string name="notification_movie_recommendation_title">New movie you might like!</string>
    <string name="notification_movie_recommendation_desc">\"%1$s\" with %2$s rating</string>

    <string name="permission_ask_write_calendar">To continue schedule the movie - please give calendar access</string>
    <string name="permission_grant">Grand</string>
    <string name="permission_denied">Deny</string>

</resources>