<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191926"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#191926"
        tools:context=".MovieDetailsActivity">

        <ImageView
            android:id="@+id/top_menu_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/top_menu_bg" />

        <ImageView
            android:id="@+id/topmovieImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/orig"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/mask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/topmovieImage"
            app:layout_constraintEnd_toEndOf="@id/topmovieImage"
            app:layout_constraintStart_toStartOf="@id/topmovieImage"
            app:layout_constraintTop_toTopOf="@id/topmovieImage"
            app:srcCompat="@drawable/mask"
            />

        <TextView
            android:id="@+id/back_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="2sp"
            android:text="   Back"
            android:textColor="#6D6D80"
            app:drawableLeftCompat="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/top_menu_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/top_menu_bg"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/movieName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:text="Avengers:   \nEnd Game"
            android:textColor="#ECECEC"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@id/topmovieImage"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal"
            app:lineHeight="40sp"
            tools:layout_editor_absoluteY="257dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/pg_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:text="@string/pg_name_text"
            android:textColor="#FFFFFF"
            android:textSize="12dp"
            app:layout_constraintBottom_toTopOf="@id/movieName"
            app:layout_constraintStart_toEndOf="@id/guideline" />

        <TextView
            android:id="@+id/tagLineTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/category_movie_text"
            android:textColor="#FF3466"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/movieName" />

        <RatingBar
            android:id="@+id/movieRatingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:numStars="5"
            android:rating="4"
            android:stepSize="1"
            android:theme="@style/MovieRatingBar"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tagLineTV" />

        <TextView
            android:id="@+id/reviewTV"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:text="@string/review_text"
            android:textColor="#6D6D80"
            app:layout_constraintStart_toEndOf="@id/movieRatingBar"
            app:layout_constraintTop_toBottomOf="@id/tagLineTV"
            app:textAllCaps="true" />

        <TextView
            android:id="@+id/story_lineTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/storyline_text"
            android:textColor="#ECECEC"

            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/reviewTV" />

        <TextView
            android:id="@+id/story_descriptionTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:alpha="0.75"
            android:fontFamily="@font/roboto_light"
            android:text="@string/movie_description_text"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/story_lineTV" />

        <TextView
            android:id="@+id/castTV"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/cast"
            android:textColor="#ECECEC"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/story_descriptionTV" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="254dp" />

        <ImageView
            android:id="@+id/imgView4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imgView3"
            app:layout_constraintTop_toBottomOf="@id/castTV"
            app:srcCompat="@drawable/movie_hemsworth" />

        <ImageView
            android:id="@+id/imgView2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            app:layout_constraintEnd_toStartOf="@+id/imgView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imgView1"
            app:layout_constraintTop_toBottomOf="@id/castTV"
            app:srcCompat="@drawable/movie_evans" />

        <ImageView
            android:id="@+id/imgView1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="7dp"
            app:layout_constraintEnd_toStartOf="@+id/imgView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/castTV"
            app:srcCompat="@drawable/movie_downey" />

        <ImageView
            android:id="@+id/imgView3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            app:layout_constraintEnd_toStartOf="@+id/imgView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imgView2"
            app:layout_constraintTop_toBottomOf="@id/castTV"
            app:srcCompat="@drawable/movie_ruffalo" />

        <TextView
            android:id="@+id/txtView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Robert  \nDowney Jr."
            android:textColor="#D8D8D8"
            app:layout_constraintEnd_toStartOf="@+id/txtView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgView1" />

        <TextView
            android:id="@+id/txtView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Chris  \n Evans"
            android:textColor="#D8D8D8"

            app:layout_constraintEnd_toStartOf="@+id/txtView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txtView1"
            app:layout_constraintTop_toBottomOf="@id/imgView2" />

        <TextView
            android:id="@+id/txtView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Mark   \nRuffalo"
            android:textColor="#D8D8D8"
            app:layout_constraintEnd_toStartOf="@+id/txtView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txtView2"
            app:layout_constraintTop_toBottomOf="@id/imgView3" />

        <TextView
            android:id="@+id/txtView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Chris  \nHemsworth"
            android:textColor="#D8D8D8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txtView3"
            app:layout_constraintTop_toBottomOf="@id/imgView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>