<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_movies_list"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Layout_movie_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_movies_list"
        tools:context=".MovieDetailsActivity">

        <ImageView
            android:id="@+id/top_menu_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/top_menu_bg" />

        <ImageView
            android:id="@+id/imgView_list_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/top_menu_bg"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/top_menu_bg"
            app:srcCompat="@drawable/ic_combined_shape" />

        <TextView
            android:id="@+id/movies_list"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal|left"
            android:lineSpacingExtra="2sp"
            android:text="Movies list"
            android:textColor="@color/movies_list"
            app:layout_constraintBottom_toBottomOf="@id/top_menu_bg"
            app:layout_constraintStart_toEndOf="@id/imgView_list_head"
            app:layout_constraintTop_toTopOf="@id/top_menu_bg"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movie_list_items"
            android:layout_width="170dp"
            android:layout_height="296dp"
            android:background="@drawable/ic_bg_c"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/top_menu_bg">

            <ImageView
                android:id="@+id/movie_list_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                app:layout_constraintEnd_toEndOf="@id/movie_list_items"
                app:layout_constraintStart_toStartOf="@id/movie_list_items"
                app:layout_constraintTop_toTopOf="@id/movie_list_items"
                app:srcCompat="@drawable/movie_avengers_end_game" />

            <ImageView
                android:id="@+id/imgView_rec_pg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/movie_list_picture"
                app:layout_constraintTop_toTopOf="@id/movie_list_picture"
                app:srcCompat="@drawable/ic_rectangle" />

            <ImageView
                android:id="@+id/imgView_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="6dp"
                app:layout_constraintEnd_toEndOf="@id/movie_list_picture"
                app:layout_constraintTop_toTopOf="@id/movie_list_picture"
                app:srcCompat="@drawable/ic_like" />

            <TextView
                android:id="@+id/pg_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_vertical"
                android:text="@string/pg_name_text"
                android:textColor="@color/pg_name"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="@id/imgView_rec_pg"
                app:layout_constraintTop_toTopOf="@id/imgView_rec_pg" />

            <TextView
                android:id="@+id/tagLineTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="214dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="22dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/category_movie_text"
                android:textColor="@color/tagLineTV"
                android:textSize="8dp"
                app:layout_constraintBottom_toBottomOf="@id/movie_list_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/movie_list_picture"
                app:layout_constraintTop_toTopOf="@id/movie_list_picture" />

            <RatingBar
                android:id="@+id/movieRatingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:numStars="5"
                android:rating="4"
                android:stepSize="1"
                android:theme="@style/MovieRatingBar"
                app:layout_constraintStart_toStartOf="@id/movie_list_picture"
                app:layout_constraintTop_toBottomOf="@id/tagLineTV" />

            <TextView
                android:id="@+id/reviewTV"
                android:layout_width="53dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_vertical"
                android:lineSpacingExtra="4sp"
                android:text="@string/review_text"
                android:textColor="@color/reviewTV"
                android:textSize="8dp"
                app:layout_constraintStart_toEndOf="@id/movieRatingBar"
                app:layout_constraintTop_toBottomOf="@id/tagLineTV"
                app:textAllCaps="true" />

            <TextView
                android:id="@+id/movieName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:text="Avengers:End Game"
                android:textColor="@color/movieName"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/movie_list_items"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/movie_list_items"
                app:layout_constraintTop_toBottomOf="@+id/movie_list_picture"
                app:lineHeight="14sp" />

            <TextView
                android:id="@+id/txtView_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_horizontal|left"
                android:text="137 min"
                android:textColor="@color/txtView_time"
                android:textSize="8dp"
                app:layout_constraintBottom_toBottomOf="@id/movie_list_items"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/movie_list_items"
                app:layout_constraintTop_toBottomOf="@id/movieName"
                app:textAllCaps="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="12dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>